@startuml classDiagramm
skinparam shadowing true
title Calculator Class Diagramm 

note "Per generare la View è stato utilizzato un file FXML" as N1
note "Le eccezioni sono state gestite sia tramite binding che tramite stampa di un messaggio sulla GUI" as N2


class StackNum<Complex>{
    - LinkedList <> stackNum
    + push(Complex c) : void 
    + top() : Complex
    + drop() : Complex
    + dup() : void
    + clear() : void
    + over() : void
    + swap() : void
    + isEmpty() : boolean
    + stackSize() : int 
    + toString() : String 
}



class App{
    - scene : Scene
    + {static} main(String[] args) : void
    - {static} loadFXML(String) fxml : Parent
    {static}setRoot(String fxml) : void
    + start(Stage stage) : void
}

class CalcController{
    I metodi del controller e i suoi attributi 
    sono disponibili nel diagramma "ControllerMethod"
}
class CalcView{
    
}

class InserisciNumero{
    + inserisci(String var,StackNum s) : Complex 
}

class Complex{
    - real : double
    - imaginary : double
    + Complex(double real,double imaginary)
    + setReal(double newReal) : void 
    + setImaginary(double newImaginary) : void
    + getReal() : double
    + getImaginary() : double
    + toString() : String
}

class InserisciOperazioni{
    + add(StackNum s) : void
    + sub(StackNum s) : void 
    + mult(StackNum s) : void
    + div(StackNum s) : void
    + sqrt(StackNum s) : void
    + invSign(StackNum s) : void
}

class OperazioniVariabili{
    - LinkedHashMap <char k, Complex c> vars
    + maggX(Complex c,String var) : void
    + minX(Complex c, String var) : void
    + plusX(String var) : Complex
    + lessX(String var) : Complex
}

App --> CalcController

CalcView .. N1

CalcController --> InserisciOperazioni : <<use>>
CalcController --> InserisciNumero : <<use>>
CalcController --> StackNum : <<use>>
CalcController --> OperazioniVariabili : <<use>>
CalcController o-- CalcView : <<has a>>


InserisciNumero <--> Complex


OperazioniVariabili --> StackNum : <<call>>
InserisciOperazioni --> StackNum : <<call>>
InserisciNumero --> StackNum : <<call>>



@enduml